--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.yadavm">
+
     <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
@@ -11,13 +12,13 @@
         android:theme="@style/AppTheme">
         <activity android:name=".Notification"/>
         <activity android:name=".search" />
-        <activity android:name=".Sign" />
+        <activity android:name=".MainActivity" />
         <activity android:name=".Login" />
         <activity android:name=".Loading"/>
-        <activity android:name=".MainActivity">
+        <activity android:name=".Sign">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+                <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
